# Container-Platform

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  clean_env.sh  container.sh  file
samples/: sample_container.h
src/: container.h  main.c
src/abstract/: features.cpp  features.h
src/main/: main.cpp  run_container.cpp  sample_container.h
